[metadata]
name = octotorch
version = 0.0.1
author = Maximilian Schulze
author_email = maximilian.schulze@student.hpi.de
description = A package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bigkingxxl/octotorch
project_urls =
    Bug Tracker = https://github.com/bigkingxxl/octotorch/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
